# stage2.bzl

./: .bazelignore  .bazelrc  BUILD.bazel  MODULE.bazel  README.md  defs.bzl
.github/workflows/: build-example-toolchains.yml  build-host-toolchains.yml  ci.yml
docs/: api.md  consumers.md  rules-library-design.md  trust.md
e2e/consumer/: .bazelrc  BUILD.bazel  MODULE.bazel
examples/: BUILD.bazel  compute.c  compute.h  cross_binary.bzl  hello.c  riscv_binary.bzl
examples/aarch64-none-elf-gcc/: BUILD.bazel
examples/arm-none-eabi-gcc/: BUILD.bazel
examples/clang/: BUILD.bazel
examples/mingw-w64-gcc/: BUILD.bazel
examples/riscv-none-elf-gcc/: BUILD.bazel
examples/riscv-none-elf-gcc-w64/: BUILD.bazel
internal/: BUILD.bazel  build_defs.bzl  gcc.bzl  gcc_combined_repo.bzl  pbzx.c  sdkprune.c  stage2.bzl
toolchain/: BUILD.bazel  build_defs.bzl  gcc.bzl  gcc_combined_repo.bzl  pbzx.c  sdkprune.c  stage2.bzl
tools/aarch64-none-elf-gcc/: BUILD.bazel
tools/arm-none-eabi-gcc/: BUILD.bazel
tools/clang/: BUILD.bazel
tools/mingw-w64-gcc/: BUILD.bazel
tools/riscv-none-elf-gcc/: BUILD.bazel
tools/riscv-none-elf-gcc-w64/: BUILD.bazel
trees/: BUILD.bazel
