load("//toolchain:stage2.bzl", "stage2_hermetic_run")
load(":riscv_binary.bzl", "cross_binary")

# End-to-end examples: the same bare-metal sources cross-compiled by
# each toolchain that //tools just built from source. The riscv flags
# spell out the target (redundantly: the compiler was configured with
# --with-arch=rv32imac --with-abi=ilp32); the others use their configured
# defaults. The mingw demo links a real PE32+ executable against the
# UCRT-based mingw-w64 runtime.

_BAREMETAL_COPTS = [
    "-Os",
    "-g",
    "-Wall",
    "-ffunction-sections",
    "-fdata-sections",
    "-specs=nosys.specs",
    "-Wl,--gc-sections",
]

cross_binary(
    name = "hello",
    srcs = [
        "compute.c",
        "hello.c",
    ],
    copts = [
        "-march=rv32imac",
        "-mabi=ilp32",
    ] + _BAREMETAL_COPTS,
    hdrs = ["compute.h"],
    target_prefix = "riscv-none-elf",
    toolchain = "//tools/riscv-none-elf-gcc",
)

cross_binary(
    name = "hello-aarch64",
    srcs = [
        "compute.c",
        "hello.c",
    ],
    copts = _BAREMETAL_COPTS,
    hdrs = ["compute.h"],
    target_prefix = "aarch64-none-elf",
    toolchain = "//tools/aarch64-none-elf-gcc",
)

cross_binary(
    name = "hello-arm",
    srcs = [
        "compute.c",
        "hello.c",
    ],
    copts = _BAREMETAL_COPTS,
    hdrs = ["compute.h"],
    target_prefix = "arm-none-eabi",
    toolchain = "//tools/arm-none-eabi-gcc",
)

cross_binary(
    name = "hello-w64",
    srcs = [
        "compute.c",
        "hello.c",
    ],
    copts = [
        "-Os",
        "-Wall",
    ],
    hdrs = ["compute.h"],
    out_ext = "exe",
    target_prefix = "x86_64-w64-mingw32",
    toolchain = "//tools/mingw-w64-gcc",
)

# macOS demo: the from-source clang + ld64.lld link an arm64 Mach-O
# executable against the pruned Apple SDK (headers + .tbd text stubs) in
# the same empty sandbox. It cannot run here — the structural check is
# the Mach-O magic — but it runs on any Apple-Silicon Mac: ld64.lld
# ad-hoc code-signs arm64 output.
stage2_hermetic_run(
    name = "hello-darwin",
    files = {
        "//toolchain:macos-sdk": "SDK",
        ":compute.c": "COMPUTE_C",
        ":hello.c": "HELLO_C",
    },
    out = "hello-darwin",
    path_trees = ["//tools/clang"],
    script = """clang -target arm64-apple-macos11 -isysroot %{SDK} -fuse-ld=lld \
    -Os -Wall -o %{OUT} %{HELLO_C} %{COMPUTE_C}
magic=$(od -An -tx1 -N4 %{OUT} | tr -d ' \\n')
if [ "$magic" != "cffaedfe" ]; then
    echo "not an arm64 Mach-O executable (magic: $magic)" >&2
    exit 1
fi
""",
    srcs = ["compute.h"],
)
