load("//:defs.bzl", "stage2_run")
load(":cross_binary.bzl", "cross_binary")

# End-to-end examples: the same bare-metal sources cross-compiled by
# each source-built toolchain in the subpackages below. The RISC-V flags
# spell out the target (redundantly: the compiler was configured with
# --with-arch=rv32imac --with-abi=ilp32); the others use their configured
# defaults. The mingw demo links a real PE32+ executable against the
# UCRT-based mingw-w64 runtime.

_BAREMETAL_COPTS = [
    "-Os",
    "-g",
    "-Wall",
    "-ffunction-sections",
    "-fdata-sections",
    "-specs=nosys.specs",
    "-Wl,--gc-sections",
]

cross_binary(
    name = "hello",
    srcs = [
        "compute.c",
        "hello.c",
    ],
    hdrs = ["compute.h"],
    copts = [
        "-march=rv32imac",
        "-mabi=ilp32",
    ] + _BAREMETAL_COPTS,
    target_prefix = "riscv-none-elf",
    toolchain = "//examples/riscv-none-elf-gcc",
)

cross_binary(
    name = "hello-aarch64",
    srcs = [
        "compute.c",
        "hello.c",
    ],
    hdrs = ["compute.h"],
    copts = _BAREMETAL_COPTS,
    target_prefix = "aarch64-none-elf",
    toolchain = "//examples/aarch64-none-elf-gcc",
)

cross_binary(
    name = "hello-arm",
    srcs = [
        "compute.c",
        "hello.c",
    ],
    hdrs = ["compute.h"],
    copts = _BAREMETAL_COPTS,
    target_prefix = "arm-none-eabi",
    toolchain = "//examples/arm-none-eabi-gcc",
)

cross_binary(
    name = "hello-w64",
    srcs = [
        "compute.c",
        "hello.c",
    ],
    hdrs = ["compute.h"],
    copts = [
        "-Os",
        "-Wall",
    ],
    out_ext = "exe",
    target_prefix = "x86_64-w64-mingw32",
    toolchain = "//examples/mingw-w64-gcc",
)

# macOS demo: the from-source clang + ld64.lld link an arm64 Mach-O
# executable against the pruned Apple SDK (headers + .tbd text stubs) in
# the same empty sandbox. It cannot run here — the structural check is
# the Mach-O magic — but it runs on any Apple-Silicon Mac: ld64.lld
# ad-hoc code-signs arm64 output.
stage2_run(
    name = "hello-darwin",
    out = "hello-darwin",
    extra_inputs = ["compute.h"],
    inputs = {
        "COMPUTE_C": ":compute.c",
        "HELLO_C": ":hello.c",
        "SDK": "//trees:macos-sdk",
    },
    path_trees = ["//trees:clang"],
    script = """clang -target arm64-apple-macos11 -isysroot %{SDK} -fuse-ld=lld \
    -Os -Wall -o %{OUT} %{HELLO_C} %{COMPUTE_C}
magic=$(od -An -tx1 -N4 %{OUT} | tr -d ' \\n')
if [ "$magic" != "cffaedfe" ]; then
    echo "not an arm64 Mach-O executable (magic: $magic)" >&2
    exit 1
fi
""",
)
